Related: fdo#71764 allow extensions button to group with help

even though they are in different containers

Change-Id: I785166c577acab03608da10fb4a33072458a82cd